# trading-api

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yaml  test.yaml
proto/: trading_executor_grpc_service.proto
src/: lib.rs  main.rs  settings.rs
src/app/: app.rs  settings.rs
src/grpc_clients/: mod.rs  trading_executor_grpc_client.rs  trading_executor_grpc_service.rs
src/http/: builder.rs  mod.rs  process_id_cache.rs  start_up.rs
src/http/controllers/: mappers.rs  mod.rs  trading_api_shared.rs
src/http/controllers/orders/: cancel_pending_order.rs  mod.rs  set_pending_order.rs
src/http/controllers/orders/models/: cancel_pending_order.rs  mod.rs  open_pending_position.rs
src/http/controllers/position/: close_position.rs  mod.rs  open_position.rs  open_postiion.rs  update_sl_tp.rs
src/http/controllers/position/models/: close_position_http_request.rs  mod.rs  open_position_http_request.rs  update_sl_tp.rs
src/http/controllers/positions/: close_position.rs  open_position.rs  update_sl_tp.rs
src/http/controllers/positions/models/: close_position_http_request.rs  open_position_http_request.rs  update_sl_tp.rs
