[package]
name = "trading-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http = { version = "0.1.0", git = "https://github.com/MyJetTools/my-http", features = [
    "macros",
    "is-alive",
    "my-telemetry",
] }

my-logger = { tag = "1.0.2", git = "https://github.com/MyJetTools/my-logger.git", features = [
    "my-seq-logger",
] }
rest-api-wl-shared = { git = "https://github.com/my-cfd-platform/rest-api-wl-shared", tag = "0.2.0" }

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

service-sdk = { git = "https://github.com/MyJetTools/service-sdk", tag = "0.2.1", features = [
    "no-sql-reader",
] }

my-settings-reader = { git = "https://github.com/MyJetTools/my-settings-reader", tag = "0.2.0", features = [
    "background-reader",
] }

my-telemetry = { tag = "1.0.1", git = "https://github.com/MyJetTools/my-telemetry.git", features = [
    "my-telemetry-writer",
] }

my-grpc-extensions = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-grpc-extensions", features = [
    "grpc-client",
    "with-telemetry"
] }

async-trait = "*"
serde = "*"
serde_json = "*"
serde_repr = "*"
prost = "*"
prost-types = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
tokio = { version = "*", features = ["full"] }

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
