[package]
name = "trading-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rest-api-wl-shared = { git = "https://github.com/my-cfd-platform/rest-api-wl-shared", tag = "0.2.0", features = [
    "auth-middleware"
]}

rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

service-sdk = { git = "https://github.com/MyJetTools/service-sdk", tag = "0.2.3", features = [
    "macros",
    "grpc",
    "my-nosql-data-reader-sdk",
] }
async-trait = "*"
serde = "*"
serde_json = "*"
serde_repr = "*"
prost = "*"
prost-types = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
tokio = { version = "*", features = ["full"] }

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
